# adapt

./: CALIBRATION_COMPARISON.md  COORDINATE_ACCURACY_IMPROVEMENTS.md  CRASH_FIX_COMPLETE.md  DYNAMIC_VERTICAL_OFFSET_EXPLANATION.md  LW_CALIBRATION_ANALYSIS.md  backtrace_analysis.md  fix_summary.md  run-adaptio-default.sh
adaptio/: .gitlab-ci.yml  ALL_FIXES_SUMMARY.md  CALIBRATION_TOP_TOUCH_FIX.md  CODEOWNERS  IMAGE_PATH_FIX_SUMMARY.md  JSON_SAFETY_FIX.md  MULTIPLE_IMAGE_TEST_SUMMARY.md  REBUILD_AND_TEST.sh  RUN_IMAGE_TESTS.sh  WORKFLOW_VALIDATION_EXPLANATION.md  adaptio.sh  flake.nix
adaptio-core/: .clang-tidy  .gitignore  .gitlab-ci.yml  AdaptioCoreConfig.cmake  CMakeLists.txt  DOCS.md  README.md  flake.nix
adaptio-core/.gitlab-ci/: builds.yml  lints.yml  tests.yml
adaptio-core/docs/: FSM.md  big_snake.md  system_model.md
adaptio-core/include/core/: version.h.in
adaptio-core/include/core/channels/: buffered_channel.h
adaptio-core/include/core/data/: data_value.h
adaptio-core/include/core/file/: yaml.h
adaptio-core/include/core/fsm/: state.h
adaptio-core/include/core/image/: camera_model.h  image.h  image_builder.h  image_data.h  image_types.h  tilted_perspective_camera.h
adaptio-core/include/core/joint_tracking/: joint_slice.h  joint_tracking.h
adaptio-core/include/core/logging/: application_log.h  component_logger.h
adaptio-core/include/core/math/: centroids.h  filter.h  lin_interp.h  value.h
adaptio-core/include/core/scanner/: factory.h  factory_impl.h  image_logger.h  image_logger_impl.h  image_provider.h  image_provider_configuration.h  joint_model.h  scanner.h  scanner_calibration_configuration.h  scanner_configuration.h  scanner_impl.h  scanner_types.h  tiff_handler.h  tiff_handler_impl.h
adaptio-core/include/core/scanner/image_provider/: basler_camera.h
adaptio-core/include/core/scanner/image_provider/simulation/: camera_simulation.h
adaptio-core/include/core/scanner/joint_buffer/: circular_joint_buffer.h  joint_buffer.h  single_joint_buffer.h
adaptio-core/include/core/scanner/joint_model/: big_snake.h  naive.h  slice.h  snake.h
adaptio-core/include/core/time/: format.h
adaptio-core/src/channels/: buffered_channel.cc
adaptio-core/src/data/: data_value.cc
adaptio-core/src/file/: yaml.cc
adaptio-core/src/fsm/: state.cc  state_builder.cc  transition.cc  transition_builder.cc
adaptio-core/src/image/: camera_model.cc  image.cc  image_builder.cc  image_data.cc  image_utilities.cc  image_utilities.h  tilted_perspective_camera.cc
adaptio-core/src/joint_tracking/: joint_slice.cc  joint_tracking.cc
adaptio-core/src/logging/: component_logger.cc
adaptio-core/src/math/: centroids.cc  filter.cc  lin_interp.cc  value.cc
adaptio-core/src/scanner/: factory_impl.cc  image_logger_impl.cc  joint_model.cc  scanner_impl.cc  tiff_handler_impl.cc
adaptio-core/src/scanner/image_provider/: basler_camera.cc
adaptio-core/src/scanner/image_provider/simulation/: camera_simulation.cc
adaptio-core/src/scanner/joint_buffer/: circular_joint_buffer.cc  single_joint_buffer.cc
adaptio-core/src/scanner/joint_model/: big_snake.cc  naive.cc  slice.cc  snake.cc  test_data.h
adaptio-core/src/time/: format.cc
adaptio-core/tests/: main.cc
adaptio-core/tests/data_set/geometries/: new_u_joint.yaml
adaptio-core/tests/data_set/scanners/: LX31624230001_241128.yaml  demo_center_240923.yaml
adaptio-core/tests/math/: README.md  Validate.jl  distort.jl
adaptio-core/tests/math/cpp/: Hp.jl  ImagePlaneToLaserPlane.jl  Undistort.jl
adaptio-core/tests/math/python/: Hp.jl  ImagePlaneToLaserPlane.jl  Undistort.jl
adaptio-core/tools/: apply_lut.py  check_report.cc  data_set_runner.cc  evaluate_snake_results.py  generateLUT.py  image_annotation.cc  render_results.py  show_abw_point_histogram_for_dataset.py  snake_visual_representation.py  test_image_set.cc
adaptio/assets/configuration/: configuration.yaml
adaptio/docs/: WebHMI_Interface_Description.md  capture_to_slider_delay.md  fps_temperature_test_plan.md  negative_cols_analysis.md
adaptio/docs/grafana/: Adaptio.json  adaptio_latency_dashboard.json
adaptio/docs/scanner/: scanner.md
adaptio/scripts/: measure_fps_and_temps.sh  simulated_adaptivity_report.sce  weldreport.py  weldreport_preface.md
adaptio/src/: CMakeLists.txt  main.cc
adaptio/src/block_tests/: BLOCK_TESTS.md  CMakeLists.txt  IMAGE_PATH_README.md  WELD_OBJECT_CALIBRATION_IMAGE_TEST.md  adaptive_welding_test.cc  calibration_test.cc  calibration_v2_test.cc  controller_block_tests.cc  coordinate_systems_test.cc  coordination_test.cc  heartbeat_test.cc  helpers.cc  helpers.h  helpers_calibration_v2.h  helpers_simulator.h  helpers_weld_control.h  joint_tracking_test.cc  ready_state_test.cc  scanner_basic_test.cc  shutdown_test.cc  weld_control_test.cc  weld_data_set_test.cc  weld_object_calibration_image_test.cc  weld_process_parameters_test.cc  weld_program_test.cc  weld_session.cc
adaptio/src/configuration/: CMakeLists.txt  calib_fix_joint_geometry_converter.h  config_manager.cc  config_manager.h  config_manager_impl.cc  config_manager_impl.h  scanner_calibration_converter.cc  scanner_calibration_converter.h  scanner_converter.h  weld_control_converter.h
adaptio/src/controller/: CMakeLists.txt  controller.h.jinja2  controller_messenger.cc  controller_messenger.h  kinematics_server.h  kinematics_server_impl.cc  kinematics_server_impl.h  management_client.cc  management_client.h  slide_position_buffer.cc  weld_system_server_impl.cc  weld_system_server_impl.h
adaptio/src/main/: application.cc  application.h  main_states.md
adaptio/src/scanner/: CMakeLists.txt  scanner.h  scanner_application.cc  scanner_application.h  scanner_configuration.h  scanner_factory.h  scanner_factory_impl.cc  scanner_factory_impl.h  scanner_impl.cc  scanner_impl.h  scanner_server.cc  scanner_server.h
adaptio/tests/: test_laser_to_torch_calibration.py
scripts/: weld_process.sh
weld_output_demo/: edges.pgm  geometry_and_results.json  input.pgm  seam_overlay.ppm  seam_points.csv
weld_output_tiff/: geometry_and_results.json  seam_points.csv
(+240 files in other folders)
